# dependency-file-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  README.md  dependencies.yaml  package-lock.json  package.json  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/: CODEOWNERS  zizmor.yml
.github/actions/build-test/: action.yml
.github/actions/semantic-release/: action.yaml  semantic-release.sh
.github/actions/setup-python/: action.yml
.github/workflows/: build-test-publish.yaml  build-test.yaml  fix-style.yaml  fix-style.yml  pr.yaml  prs.yaml  release.yaml  semantic-pr-title.yaml
ci/: build-test.sh  build_docs.sh  output-release-version.sh  pypi-publish.sh  semantic-release-success.sh  update-version.sh  update-versions.sh
ci/build-test/: conda.sh  wheel.sh
ci/publish/: conda.sh  wheel.sh
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/api_docs/: index.rst
recipe/: meta.yaml
src/rapids_dep_file_generator/: cli.py  constants.py  rapids_dep_file_generator.py
src/rapids_dependency_file_generator/: __init__.py  _cli.py  _config.py  _constants.py  _rapids_dependency_file_generator.py  _rapids_dependency_file_validator.py  _warnings.py  cli.py  config.py  constants.py  rapids_dependency_file_generator.py  rapids_dependency_file_validator.py  schema.json
src/rapids_env_generator/: cli.py  constants.py  rapids_env_generator.py
tests/: conftest.py  test.py  test_cli.py  test_conda_build_config.py  test_config.py  test_examples.py  test_rapids_dep_file_generator.py  test_rapids_dependency_file_generator.py  test_rapids_dependency_file_validator.py  test_rapids_env_generator.py  test_schema.py
tests/examples/conda-build-config/: dependencies.yaml
tests/examples/conda-build-config/output/expected/: build_cuda-115_arch-arm64_py-310.yaml  build_cuda-115_arch-arm64_py-39.yaml  build_cuda-115_arch-x86_64_py-310.yaml  build_cuda-115_arch-x86_64_py-39.yaml  build_cuda-116_arch-arm64_py-310.yaml  build_cuda-116_arch-arm64_py-39.yaml  build_cuda-116_arch-x86_64_py-310.yaml  build_cuda-116_arch-x86_64_py-39.yaml  conda_build_config.yaml
tests/examples/conda-meta/: dependencies.yaml
tests/examples/conda-meta/output/expected/: build_cuda-116_arch-x86_64.yaml  host.yaml
tests/examples/conda-minimal/: dependencies.yaml
tests/examples/conda-minimal/output/expected/: all_cuda-115_arch-x86_64.yaml  all_cuda-116_arch-x86_64.yaml  build_cuda-115_arch-x86_64.yaml  build_cuda-116_arch-x86_64.yaml
tests/examples/duplicate-specific-matrix-entries/: dependencies.yaml
tests/examples/integration/: dependencies.yaml
tests/examples/integration/output/expected/: all_cuda-115.yaml  all_cuda-115_arch-arm64.yaml  all_cuda-116.yaml  conda_build_config.yaml  requirements_all_cuda-115.txt  requirements_all_cuda-115_arch-arm64.txt  requirements_all_cuda-116.txt
tests/examples/invalid/invalid-requirement/: dependencies.yaml
tests/examples/invalid/pip-no-list/: dependencies.yaml
tests/examples/matrix/: dependencies.yaml
tests/examples/matrix-glob/: dependencies.yaml
tests/examples/matrix-null-item/: dependencies.yaml
tests/examples/nested-pyproject/: dependencies.yaml  pyproject.toml
tests/examples/no-matrix/: dependencies.yaml
tests/examples/no-matrix/output/expected/: checks.yaml  (+1 more)
tests/examples/no-specific-match/: dependencies.yaml
tests/examples/overlapping-deps/: dependencies.yaml
tests/examples/pyproject-no-extras/: dependencies.yaml
tests/examples/pyproject_bad_key/: dependencies.yaml
tests/examples/pyproject_matrix/: dependencies.yaml
tests/examples/pyproject_matrix_fallback/: dependencies.yaml
tests/examples/requirements-minimal/: dependencies.yaml
tests/examples/requirements-pip-dict/: dependencies.yaml
tests/examples/specific-fallback/: dependencies.yaml
tests/examples/specific-fallback-first/: dependencies.yaml
tests/examples/specific-fallback-multiple-matches/: dependencies.yaml
(+45 files in other folders)
