[metadata]
name = rapids-env-generator
version = attr: rapids_env_generator._version.__version__
author = RAPIDS Development Team
author_email = pypi@rapids.ai
url = https://github.com/rapidsai/rapids-env-generator
description = Tool for generating RAPIDS environment files
long_description = See [github.com/rapidsai/rapids-env-generator](https://github.com/rapidsai/rapids-env-generator) for the latest usage instructions.
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
install_requires =
    PyYAML

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    rapids-env-generator = rapids_env_generator.cli:main
