[metadata]
name = rapids-dependency-file-generator
version = attr: rapids_dep_file_generator._version.__version__
author = RAPIDS Development Team
author_email = pypi@rapids.ai
url = https://github.com/rapidsai/dependency-file-generator
description = Tool for generating RAPIDS environment files
long_description = See [github.com/rapidsai/dependency-file-generator](https://github.com/rapidsai/dependency-file-generator) for the latest usage instructions.
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
install_requires =
    PyYAML

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    rapids-dependency-file-generator = rapids_dep_file_generator.cli:main
